--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
     },
     "devDependencies": {
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
-    },
-    "dependencies": {
+        "bootstrap": "^4.1.1",
+        "cross-env": "^5.1.6",
+        "jquery": "^3.2",
+        "lodash": "^4.17.10",
+        "popper.js": "^1.12",
+        "v-select2-component": "^0.3.0",
+        "vue": "^2.5.16",
+        "vue-awesome-notifications": "^2.2.5",
+        "vue-bootstrap-toggle": "^1.1.3",
+        "vue-router": "^3.0.1",
+        "vue-sweetalert2": "^1.3.1",
+        "vue2-datatable-component": "^2.3.1",
         "admin-lte": "^3.0.0-alpha.2"
     }
 }
