--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0",
-        "phing/phing": "~2.14.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
