--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-router": "^3.0.1",
         "vue-sweetalert2": "^1.3.1",
         "vue2-datatable-component": "^2.3.1",
-        "admin-lte": "^3.0.0-alpha.2"
+        "admin-lte": "^3.0.0-alpha.2",
+        "moment": "^2.22.2"
     }
 }
