--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-sweetalert2": "^1.3.1",
         "vue2-datatable-component": "^2.3.1",
         "admin-lte": "^3.0.0-alpha.2",
-        "moment": "^2.22.2"
+        "moment": "^2.22.2",
+        "v-mask": "^1.3.2"
     }
 }
