--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "moment": "^2.22.2"
     },
     "dependencies": {
+        "chart.js": "^2.7.2",
+        "vue-chartjs": "^3.4.0",
         "vuejs-datepicker": "^1.5.2"
     }
 }
