--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-awesome-notifications": "^2.2.5",
         "vue-bootstrap-toggle": "^1.1.3",
         "vue-router": "^3.0.2",
+        "vuex": "^3.0.1",
         "vue-sweetalert2": "^1.6.3",
         "vue-template-compiler": "^2.5.21",
         "vue2-datatable-component": "^2.3.1"
