--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "chart.js": "^2.7.3",
         "vue-chartjs": "^3.4.0",
+        "vue-cookie": "^1.1.4",
         "vuejs-datepicker": "^1.5.4"
     }
 }
