--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     },
     "devDependencies": {
         "admin-lte": "^3.0.0-alpha.2",
-        "axios": "^0.18",
-        "bootstrap": "^4.2.1",
+        "axios": "^0.19.0",
+        "bootstrap": "^4.3.1",
         "cross-env": "^5.1.6",
-        "jquery": "^3.2",
+        "jquery": "^3.4.1",
         "laravel-mix": "^4.0.12",
-        "lodash": "^4.17.11",
+        "lodash": "^4.17.15",
         "moment": "^2.23.0",
         "popper.js": "^1.14.6",
         "resolve-url-loader": "^2.3.1",
@@ -27,10 +27,10 @@
         "vue-awesome-notifications": "^2.2.5",
         "vue-bootstrap-toggle": "^1.1.3",
         "vue-router": "^3.0.2",
-        "vuex": "^3.0.1",
         "vue-sweetalert2": "^1.6.3",
         "vue-template-compiler": "^2.5.21",
-        "vue2-datatable-component": "^2.3.1"
+        "vue2-datatable-component": "^2.3.1",
+        "vuex": "^3.0.1"
     },
     "dependencies": {
         "chart.js": "^2.7.3",
